lib_LTLIBRARIES = libbirch.la

libbirch_la_SOURCES = \
  libbirch/Any.cpp \
  libbirch/BiconnectedMemo.cpp \
  libbirch/Memo.cpp \
  libbirch/memory.cpp

include_HEADERS = \
  libbirch/libbirch.hpp

nobase_include_HEADERS = \
  libbirch/Any.hpp \
  libbirch/Atomic.hpp \
  libbirch/BiconnectedCollector.hpp \
  libbirch/BiconnectedCopier.hpp \
  libbirch/BiconnectedMemo.hpp \
  libbirch/Bridger.hpp \
  libbirch/Collector.hpp \
  libbirch/Copier.hpp \
  libbirch/Destroyer.hpp \
  libbirch/docs.hpp \
  libbirch/external.hpp \
  libbirch/internal.hpp \
  libbirch/Marker.hpp \
  libbirch/macro.hpp \
  libbirch/Memo.hpp \
  libbirch/memory.hpp \
  libbirch/mutable.hpp \
  libbirch/Reacher.hpp \
  libbirch/Scanner.hpp \
  libbirch/Shared.hpp \
  libbirch/Spanner.hpp \
  libbirch/thread.hpp \
  libbirch/type.hpp

dist_noinst_DATA =  \
  Doxyfile \
  LICENSE
