lib_LTLIBRARIES = libmembirch.la

libmembirch_la_LDFLAGS = $(AM_LDFLAGS) -release $(PACKAGE_VERSION)

libmembirch_la_SOURCES = \
  membirch/Any.cpp \
  membirch/BiconnectedCollector.cpp \
  membirch/BiconnectedCopier.cpp \
  membirch/BiconnectedMemo.cpp \
  membirch/Bridger.cpp \
  membirch/Collector.cpp \
  membirch/Copier.cpp \
  membirch/Marker.cpp \
  membirch/Memo.cpp \
  membirch/memory.cpp \
  membirch/Reacher.cpp \
  membirch/Scanner.cpp \
  membirch/Spanner.cpp

include_HEADERS = \
  membirch/membirch.hpp

nobase_include_HEADERS = \
  membirch/Any.hpp \
  membirch/Atomic.hpp \
  membirch/BiconnectedCollector.hpp \
  membirch/BiconnectedCopier.hpp \
  membirch/BiconnectedMemo.hpp \
  membirch/Bridger.hpp \
  membirch/Collector.hpp \
  membirch/Copier.hpp \
  membirch/Destroyer.hpp \
  membirch/docs.hpp \
  membirch/external.hpp \
  membirch/internal.hpp \
  membirch/Marker.hpp \
  membirch/macro.hpp \
  membirch/Memo.hpp \
  membirch/memory.hpp \
  membirch/mutable.hpp \
  membirch/Reacher.hpp \
  membirch/Scanner.hpp \
  membirch/Shared.hpp \
  membirch/Spanner.hpp \
  membirch/thread.hpp \
  membirch/type.hpp

dist_noinst_DATA =  \
  Doxyfile \
  LICENSE \
  README.md
